//
// Created by Gerard on 21-2-2016.
//

#ifndef ALGORITHMS_LINKEDLIST_H
#define ALGORITHMS_LINKEDLIST_H

class LinkedList
{

};

#endif //ALGORITHMS_LINKEDLIST_H
